--- a/FormKurs/FormKurs.vcxproj
+++ b/FormKurs/FormKurs.vcxproj
@@ -122,12 +122,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Group_Proc.cpp" />
     <ClCompile Include="MainForm.cpp" />
     <ClCompile Include="NewChannel.cpp" />
     <ClCompile Include="ReadChannel.cpp" />
     <ClCompile Include="WriteChannel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Group_Proc.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -142,6 +146,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Group_Proc.resx">
+      <DependentUpon>Group_Proc.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.h</DependentUpon>
     </EmbeddedResource>
