--- a/FormKurs/FormKurs.vcxproj.filters
+++ b/FormKurs/FormKurs.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="WriteChannel.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Group_Proc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -39,6 +42,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="WriteChannel.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Group_Proc.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
